--- a/GasStations/Base.lproj/Main.storyboard
+++ b/GasStations/Base.lproj/Main.storyboard
@@ -47,6 +47,9 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t5e-9y-BVo">
                                 <rect key="frame" x="-4" y="0.0" width="383" height="606"/>
                             </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradient" translatesAutoresizingMaskIntoConstraints="NO" id="209-4N-jbU">
+                                <rect key="frame" x="-4.5" y="0.0" width="383" height="606"/>
+                            </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="Zna-2H-ZbL">
                                 <rect key="frame" x="-4" y="606" width="383" height="62"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -62,45 +65,47 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="70" height="60"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="33.5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aeQ-TF-8VT">
-                                                            <rect key="frame" x="3" y="15" width="51" height="21"/>
+                                                            <rect key="frame" x="8" y="13" width="44" height="18"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RUS_RED" translatesAutoresizingMaskIntoConstraints="NO" id="837-VA-1RX">
+                                                            <rect key="frame" x="51" y="20" width="9" height="8"/>
+                                                            <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="час назад" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EYH-0m-Sb3">
                                                             <rect key="frame" x="3" y="42" width="67" height="18"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="18" id="Nyx-Cv-yi0"/>
+                                                                <constraint firstAttribute="height" constant="18" id="2I3-UW-1s1"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="11"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RUS_RED" translatesAutoresizingMaskIntoConstraints="NO" id="837-VA-1RX">
-                                                            <rect key="frame" x="52" y="23" width="7" height="9"/>
-                                                            <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                        </imageView>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.95287138223648071" green="0.95298200845718384" blue="0.95282047986984253" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="trailing" secondItem="EYH-0m-Sb3" secondAttribute="trailing" id="5tP-qE-dmB"/>
-                                                        <constraint firstAttribute="trailing" secondItem="aeQ-TF-8VT" secondAttribute="trailing" constant="16" id="8Rq-hM-P0T"/>
-                                                        <constraint firstItem="837-VA-1RX" firstAttribute="leading" secondItem="6iG-AG-kqz" secondAttribute="leading" constant="52" id="U43-8k-CyA"/>
-                                                        <constraint firstItem="aeQ-TF-8VT" firstAttribute="leading" secondItem="6iG-AG-kqz" secondAttribute="leading" constant="3" id="Wds-sX-7o7"/>
-                                                        <constraint firstItem="EYH-0m-Sb3" firstAttribute="leading" secondItem="aeQ-TF-8VT" secondAttribute="leading" id="c66-nS-Qj8"/>
-                                                        <constraint firstItem="EYH-0m-Sb3" firstAttribute="top" secondItem="837-VA-1RX" secondAttribute="bottom" constant="10" id="iVI-iN-dQ1"/>
-                                                        <constraint firstItem="837-VA-1RX" firstAttribute="top" secondItem="6iG-AG-kqz" secondAttribute="top" constant="23" id="lHf-hR-YXS"/>
-                                                        <constraint firstAttribute="bottom" secondItem="EYH-0m-Sb3" secondAttribute="bottom" id="smR-nQ-i2A"/>
-                                                        <constraint firstItem="EYH-0m-Sb3" firstAttribute="top" secondItem="aeQ-TF-8VT" secondAttribute="bottom" constant="6" id="wUu-UQ-eXl"/>
+                                                        <constraint firstAttribute="trailing" secondItem="837-VA-1RX" secondAttribute="trailing" constant="10" id="1S4-Ub-38I"/>
+                                                        <constraint firstItem="aeQ-TF-8VT" firstAttribute="leading" secondItem="6iG-AG-kqz" secondAttribute="leadingMargin" id="KnK-WD-UaN"/>
+                                                        <constraint firstItem="EYH-0m-Sb3" firstAttribute="top" secondItem="aeQ-TF-8VT" secondAttribute="bottom" constant="11" id="PfL-Ec-Ej0"/>
+                                                        <constraint firstItem="EYH-0m-Sb3" firstAttribute="top" secondItem="837-VA-1RX" secondAttribute="bottom" constant="14" id="RdB-B9-24k"/>
+                                                        <constraint firstItem="837-VA-1RX" firstAttribute="leading" secondItem="6iG-AG-kqz" secondAttribute="leading" constant="51" id="VqO-kg-JxA"/>
+                                                        <constraint firstItem="837-VA-1RX" firstAttribute="top" secondItem="6iG-AG-kqz" secondAttribute="top" constant="20" id="bmV-GP-i83"/>
+                                                        <constraint firstAttribute="trailing" secondItem="aeQ-TF-8VT" secondAttribute="trailing" constant="18" id="bsD-ql-TjT"/>
+                                                        <constraint firstAttribute="bottom" secondItem="EYH-0m-Sb3" secondAttribute="bottom" id="fAs-JQ-GN5"/>
+                                                        <constraint firstItem="aeQ-TF-8VT" firstAttribute="top" secondItem="6iG-AG-kqz" secondAttribute="top" constant="13" id="jdK-b5-S6S"/>
+                                                        <constraint firstItem="EYH-0m-Sb3" firstAttribute="leading" secondItem="6iG-AG-kqz" secondAttribute="leading" constant="3" id="oo0-NG-iWa"/>
+                                                        <constraint firstAttribute="trailing" secondItem="EYH-0m-Sb3" secondAttribute="trailing" id="pgK-K5-rpS"/>
                                                     </constraints>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="72f-qm-TlY">
                                                     <rect key="frame" x="77" y="0.0" width="230" height="60"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shellStation" translatesAutoresizingMaskIntoConstraints="NO" id="kZl-ko-bGr">
-                                                            <rect key="frame" x="0.0" y="15" width="16" height="16"/>
+                                                            <rect key="frame" x="0.0" y="15" width="15" height="15"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="16" id="4US-1A-IBa"/>
+                                                                <constraint firstAttribute="width" constant="15" id="LEJ-aF-oy3"/>
                                                             </constraints>
                                                         </imageView>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kjQ-F5-xbB">
@@ -134,11 +139,12 @@
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="trailing" secondItem="kjQ-F5-xbB" secondAttribute="trailing" id="3T8-EL-njL"/>
-                                                        <constraint firstItem="kZl-ko-bGr" firstAttribute="top" secondItem="72f-qm-TlY" secondAttribute="top" constant="15" id="85W-7Z-dGa"/>
+                                                        <constraint firstItem="kZl-ko-bGr" firstAttribute="top" secondItem="72f-qm-TlY" secondAttribute="top" constant="15" id="9wI-fF-Z4t"/>
                                                         <constraint firstItem="kjQ-F5-xbB" firstAttribute="top" secondItem="72f-qm-TlY" secondAttribute="top" id="EAu-mi-kym"/>
-                                                        <constraint firstItem="kjQ-F5-xbB" firstAttribute="leading" secondItem="kZl-ko-bGr" secondAttribute="trailing" id="HIZ-KM-to3"/>
+                                                        <constraint firstAttribute="bottom" secondItem="kZl-ko-bGr" secondAttribute="bottom" constant="30" id="PD3-fJ-N5H"/>
+                                                        <constraint firstItem="kZl-ko-bGr" firstAttribute="leading" secondItem="72f-qm-TlY" secondAttribute="leading" id="UeL-Op-exM"/>
+                                                        <constraint firstItem="kjQ-F5-xbB" firstAttribute="leading" secondItem="kZl-ko-bGr" secondAttribute="trailing" constant="1" id="XO9-Za-lvh"/>
                                                         <constraint firstAttribute="bottom" secondItem="kjQ-F5-xbB" secondAttribute="bottom" id="aTh-bd-daE"/>
-                                                        <constraint firstItem="kZl-ko-bGr" firstAttribute="leading" secondItem="72f-qm-TlY" secondAttribute="leading" id="sQS-FE-1Ud"/>
                                                     </constraints>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QPa-qo-nfA">
@@ -261,12 +267,16 @@
                             <constraint firstItem="t5e-9y-BVo" firstAttribute="trailing" secondItem="Zna-2H-ZbL" secondAttribute="trailing" id="4vb-2W-n0b"/>
                             <constraint firstItem="t5e-9y-BVo" firstAttribute="centerX" secondItem="MqL-LH-46o" secondAttribute="centerX" id="6wK-eF-Rni"/>
                             <constraint firstItem="VBx-80-yX6" firstAttribute="centerX" secondItem="OeT-xw-ZBb" secondAttribute="centerX" id="8Z3-hb-ULp"/>
+                            <constraint firstItem="209-4N-jbU" firstAttribute="centerY" secondItem="t5e-9y-BVo" secondAttribute="centerY" id="A32-6W-PhI"/>
+                            <constraint firstItem="209-4N-jbU" firstAttribute="width" secondItem="t5e-9y-BVo" secondAttribute="width" id="DQS-Jf-ShU"/>
                             <constraint firstAttribute="bottomMargin" secondItem="Zna-2H-ZbL" secondAttribute="bottom" constant="-1" id="FO3-xv-Kha"/>
                             <constraint firstItem="Zna-2H-ZbL" firstAttribute="height" secondItem="OeT-xw-ZBb" secondAttribute="height" multiplier="0.092" id="G9E-yw-WL8"/>
+                            <constraint firstItem="209-4N-jbU" firstAttribute="centerX" secondItem="t5e-9y-BVo" secondAttribute="centerX" id="IsO-0c-KCc"/>
                             <constraint firstItem="Zna-2H-ZbL" firstAttribute="top" secondItem="MqL-LH-46o" secondAttribute="bottom" id="LyE-Xk-hip"/>
                             <constraint firstItem="t5e-9y-BVo" firstAttribute="leading" secondItem="Zna-2H-ZbL" secondAttribute="leading" id="Pem-HO-h3O"/>
                             <constraint firstItem="VBx-80-yX6" firstAttribute="width" secondItem="OeT-xw-ZBb" secondAttribute="width" multiplier="0.3" id="V8s-ST-mDL"/>
                             <constraint firstItem="MqL-LH-46o" firstAttribute="top" secondItem="VBx-80-yX6" secondAttribute="bottom" constant="-10" id="Wsn-P5-Sw5"/>
+                            <constraint firstItem="209-4N-jbU" firstAttribute="height" secondItem="t5e-9y-BVo" secondAttribute="height" id="YHf-77-RPw"/>
                             <constraint firstItem="Zna-2H-ZbL" firstAttribute="top" secondItem="t5e-9y-BVo" secondAttribute="bottom" id="dPG-ih-h6i"/>
                             <constraint firstAttribute="trailing" secondItem="MqL-LH-46o" secondAttribute="trailing" id="g9R-D6-1BY"/>
                             <constraint firstItem="MqL-LH-46o" firstAttribute="height" secondItem="OeT-xw-ZBb" secondAttribute="height" multiplier="0.08" id="iNY-OT-Ehv"/>
@@ -293,9 +303,10 @@
     </scenes>
     <resources>
         <image name="Combined Shape2" width="17" height="7"/>
-        <image name="RUS_RED" width="7" height="8"/>
+        <image name="RUS_RED" width="15" height="17"/>
         <image name="distanse" width="100" height="109"/>
         <image name="distanseImage" width="15" height="15"/>
-        <image name="shellStation" width="16" height="16"/>
+        <image name="gradient" width="375" height="667"/>
+        <image name="shellStation" width="31" height="31"/>
     </resources>
 </document>
