--- a/GasStations/PinView.xib
+++ b/GasStations/PinView.xib
@@ -6,7 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -23,52 +23,54 @@
                     <rect key="frame" x="30" y="0.0" width="160" height="40"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sadovnichffff" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wPi-LL-k5X">
-                            <rect key="frame" x="5" y="3" width="65" height="11.5"/>
+                            <rect key="frame" x="5" y="3" width="100" height="12"/>
                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="35.5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ETt-Lb-Tzs">
-                            <rect key="frame" x="5" y="15" width="33" height="16"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="33" id="ili-Ss-KOQ"/>
-                            </constraints>
+                            <rect key="frame" x="5" y="16" width="33" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F45-F8-Wep">
-                            <rect key="frame" x="104" y="3" width="21" height="28"/>
+                            <rect key="frame" x="109" y="8" width="15" height="15"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="21" id="bTO-la-Q6f"/>
+                                <constraint firstAttribute="width" constant="15" id="Oh5-17-klD"/>
                             </constraints>
                             <state key="normal" image="like"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JwU-ez-6Bo">
-                            <rect key="frame" x="135" y="3" width="17" height="28"/>
+                            <rect key="frame" x="134" y="8" width="16" height="15"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="16" id="GsB-rg-p6P"/>
+                            </constraints>
                             <state key="normal" image="direction"/>
                         </button>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RUS" translatesAutoresizingMaskIntoConstraints="NO" id="jHX-T7-J99">
-                            <rect key="frame" x="36" y="19.5" width="6" height="8"/>
+                            <rect key="frame" x="36" y="20" width="7" height="8"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="7" id="bJn-2f-5Eh"/>
+                                <constraint firstAttribute="height" constant="8" id="r5O-GV-6Ly"/>
+                            </constraints>
                         </imageView>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="wPi-LL-k5X" firstAttribute="top" secondItem="okn-hR-rdq" secondAttribute="top" constant="3" id="0SR-pt-Hsh"/>
-                        <constraint firstItem="ETt-Lb-Tzs" firstAttribute="leading" secondItem="okn-hR-rdq" secondAttribute="leading" constant="5" id="6aV-wu-iAc"/>
-                        <constraint firstItem="F45-F8-Wep" firstAttribute="top" secondItem="JwU-ez-6Bo" secondAttribute="top" id="B1A-fI-vV7"/>
-                        <constraint firstItem="jHX-T7-J99" firstAttribute="top" secondItem="wPi-LL-k5X" secondAttribute="bottom" constant="5" id="QhD-J9-qVc"/>
-                        <constraint firstItem="jHX-T7-J99" firstAttribute="centerY" secondItem="ETt-Lb-Tzs" secondAttribute="centerY" id="Yrb-CH-XUK"/>
-                        <constraint firstItem="jHX-T7-J99" firstAttribute="leading" secondItem="okn-hR-rdq" secondAttribute="leading" constant="36" id="alR-9D-dVU"/>
-                        <constraint firstItem="F45-F8-Wep" firstAttribute="leading" secondItem="jHX-T7-J99" secondAttribute="trailing" constant="62" id="bPn-IR-FMT"/>
-                        <constraint firstItem="ETt-Lb-Tzs" firstAttribute="bottom" secondItem="F45-F8-Wep" secondAttribute="bottom" id="cOL-9c-gM6"/>
-                        <constraint firstItem="F45-F8-Wep" firstAttribute="baseline" secondItem="JwU-ez-6Bo" secondAttribute="baseline" id="cga-ss-53t"/>
-                        <constraint firstItem="F45-F8-Wep" firstAttribute="leading" secondItem="ETt-Lb-Tzs" secondAttribute="trailing" constant="66" id="fnR-Mf-aAQ"/>
-                        <constraint firstItem="JwU-ez-6Bo" firstAttribute="leading" secondItem="F45-F8-Wep" secondAttribute="trailing" constant="10" id="h0P-pV-0rT"/>
-                        <constraint firstItem="ETt-Lb-Tzs" firstAttribute="leading" secondItem="wPi-LL-k5X" secondAttribute="leading" id="iai-o4-9jE"/>
-                        <constraint firstItem="JwU-ez-6Bo" firstAttribute="top" secondItem="okn-hR-rdq" secondAttribute="top" constant="3" id="oYH-Fj-SmW"/>
-                        <constraint firstAttribute="bottom" secondItem="JwU-ez-6Bo" secondAttribute="bottom" constant="9" id="t61-gD-lGw"/>
-                        <constraint firstAttribute="trailing" secondItem="JwU-ez-6Bo" secondAttribute="trailing" constant="8" id="um2-td-cqX"/>
-                        <constraint firstItem="F45-F8-Wep" firstAttribute="firstBaseline" secondItem="JwU-ez-6Bo" secondAttribute="firstBaseline" id="wnn-Lr-1Tr"/>
+                        <constraint firstAttribute="trailing" secondItem="JwU-ez-6Bo" secondAttribute="trailing" constant="10" id="4Qg-4F-2NH"/>
+                        <constraint firstAttribute="bottom" secondItem="F45-F8-Wep" secondAttribute="bottom" constant="17" id="8tX-b7-UcT"/>
+                        <constraint firstItem="JwU-ez-6Bo" firstAttribute="leading" secondItem="F45-F8-Wep" secondAttribute="trailing" constant="10" id="9fz-XH-45q"/>
+                        <constraint firstItem="F45-F8-Wep" firstAttribute="top" secondItem="JwU-ez-6Bo" secondAttribute="top" id="Bau-8m-OyU"/>
+                        <constraint firstItem="wPi-LL-k5X" firstAttribute="leading" secondItem="ETt-Lb-Tzs" secondAttribute="leading" id="DzE-cP-ni9"/>
+                        <constraint firstItem="jHX-T7-J99" firstAttribute="centerY" secondItem="ETt-Lb-Tzs" secondAttribute="centerY" id="Epn-cU-cbX"/>
+                        <constraint firstItem="jHX-T7-J99" firstAttribute="leading" secondItem="okn-hR-rdq" secondAttribute="leading" constant="36" id="PlY-0B-uzI"/>
+                        <constraint firstItem="F45-F8-Wep" firstAttribute="top" secondItem="okn-hR-rdq" secondAttribute="topMargin" id="Q13-bm-0cU"/>
+                        <constraint firstItem="ETt-Lb-Tzs" firstAttribute="top" secondItem="wPi-LL-k5X" secondAttribute="bottom" constant="1" id="Rel-IX-Bcd"/>
+                        <constraint firstItem="F45-F8-Wep" firstAttribute="leading" secondItem="wPi-LL-k5X" secondAttribute="trailing" constant="4" id="YjG-bi-beW"/>
+                        <constraint firstItem="wPi-LL-k5X" firstAttribute="leading" secondItem="okn-hR-rdq" secondAttribute="leading" constant="5" id="dXi-vO-Gsd"/>
+                        <constraint firstItem="F45-F8-Wep" firstAttribute="bottom" secondItem="JwU-ez-6Bo" secondAttribute="bottom" id="kAg-Ek-1t9"/>
+                        <constraint firstItem="ETt-Lb-Tzs" firstAttribute="bottom" secondItem="okn-hR-rdq" secondAttribute="bottomMargin" id="tV0-B0-yCV"/>
+                        <constraint firstItem="F45-F8-Wep" firstAttribute="leading" secondItem="ETt-Lb-Tzs" secondAttribute="trailing" constant="71" id="z9b-ZV-1Jd"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b6z-CU-vhm">
@@ -79,26 +81,26 @@
                         </imageView>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="xgb-HU-2Rn" secondAttribute="trailing" constant="8" id="0Kt-Y4-gAc"/>
-                        <constraint firstItem="xgb-HU-2Rn" firstAttribute="leading" secondItem="b6z-CU-vhm" secondAttribute="leading" constant="8" id="QQC-e0-85F"/>
-                        <constraint firstAttribute="bottom" secondItem="xgb-HU-2Rn" secondAttribute="bottom" constant="16" id="YhL-Nm-u2d"/>
-                        <constraint firstItem="xgb-HU-2Rn" firstAttribute="top" secondItem="b6z-CU-vhm" secondAttribute="top" constant="10" id="rwk-k0-LDc"/>
+                        <constraint firstItem="xgb-HU-2Rn" firstAttribute="trailing" secondItem="b6z-CU-vhm" secondAttribute="trailingMargin" id="6oS-7X-QEJ"/>
+                        <constraint firstItem="xgb-HU-2Rn" firstAttribute="leading" secondItem="b6z-CU-vhm" secondAttribute="leadingMargin" id="78N-0O-ert"/>
+                        <constraint firstItem="xgb-HU-2Rn" firstAttribute="top" secondItem="b6z-CU-vhm" secondAttribute="top" constant="10" id="FkI-2x-647"/>
+                        <constraint firstAttribute="bottom" secondItem="xgb-HU-2Rn" secondAttribute="bottom" constant="16" id="X4h-ID-b5L"/>
                     </constraints>
                 </view>
             </subviews>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="okn-hR-rdq" secondAttribute="bottom" id="1WS-2K-cjx"/>
-                <constraint firstItem="okn-hR-rdq" firstAttribute="leading" secondItem="b6z-CU-vhm" secondAttribute="trailing" id="4iP-lh-Pnt"/>
-                <constraint firstItem="b6z-CU-vhm" firstAttribute="top" secondItem="okn-hR-rdq" secondAttribute="top" id="CXa-2Y-TEu"/>
-                <constraint firstItem="b6z-CU-vhm" firstAttribute="bottom" secondItem="okn-hR-rdq" secondAttribute="bottom" id="Ce6-x3-1xe"/>
-                <constraint firstItem="r76-Nu-aC1" firstAttribute="top" secondItem="RzT-dH-2IW" secondAttribute="top" id="FNQ-Su-ETT"/>
-                <constraint firstItem="b6z-CU-vhm" firstAttribute="leading" secondItem="RzT-dH-2IW" secondAttribute="leading" id="WIE-Xd-Tsp"/>
-                <constraint firstAttribute="bottom" secondItem="r76-Nu-aC1" secondAttribute="bottom" id="XeX-fM-Hcv"/>
-                <constraint firstAttribute="trailing" secondItem="okn-hR-rdq" secondAttribute="trailing" id="Y90-vd-TzZ"/>
-                <constraint firstItem="okn-hR-rdq" firstAttribute="leading" secondItem="RzT-dH-2IW" secondAttribute="leading" constant="30" id="ZXY-75-ivW"/>
-                <constraint firstAttribute="trailing" secondItem="r76-Nu-aC1" secondAttribute="trailing" id="jSf-CV-hoT"/>
-                <constraint firstItem="r76-Nu-aC1" firstAttribute="leading" secondItem="RzT-dH-2IW" secondAttribute="leading" id="reO-4n-5nD"/>
-                <constraint firstItem="okn-hR-rdq" firstAttribute="top" secondItem="RzT-dH-2IW" secondAttribute="top" id="sRp-0W-csg"/>
+                <constraint firstItem="okn-hR-rdq" firstAttribute="leading" secondItem="RzT-dH-2IW" secondAttribute="leading" constant="30" id="1R8-Kz-GKG"/>
+                <constraint firstItem="r76-Nu-aC1" firstAttribute="bottom" secondItem="okn-hR-rdq" secondAttribute="bottom" id="9q4-X8-lSq"/>
+                <constraint firstItem="b6z-CU-vhm" firstAttribute="top" secondItem="okn-hR-rdq" secondAttribute="top" id="Fa1-x1-F51"/>
+                <constraint firstItem="r76-Nu-aC1" firstAttribute="top" secondItem="RzT-dH-2IW" secondAttribute="top" id="Fj1-cW-UrN"/>
+                <constraint firstAttribute="trailing" secondItem="okn-hR-rdq" secondAttribute="trailing" id="HJL-ql-bys"/>
+                <constraint firstItem="okn-hR-rdq" firstAttribute="leading" secondItem="b6z-CU-vhm" secondAttribute="trailing" id="Mlp-r8-7LS"/>
+                <constraint firstItem="b6z-CU-vhm" firstAttribute="bottom" secondItem="r76-Nu-aC1" secondAttribute="bottom" id="N6E-xJ-oFV"/>
+                <constraint firstItem="b6z-CU-vhm" firstAttribute="leading" secondItem="r76-Nu-aC1" secondAttribute="leading" id="OCh-2n-16s"/>
+                <constraint firstItem="r76-Nu-aC1" firstAttribute="trailing" secondItem="okn-hR-rdq" secondAttribute="trailing" id="dvo-L3-0Jl"/>
+                <constraint firstItem="r76-Nu-aC1" firstAttribute="leading" secondItem="RzT-dH-2IW" secondAttribute="leading" id="eqx-Ta-GMR"/>
+                <constraint firstAttribute="bottom" secondItem="b6z-CU-vhm" secondAttribute="bottom" id="mNQ-hl-aTt"/>
+                <constraint firstItem="r76-Nu-aC1" firstAttribute="top" secondItem="okn-hR-rdq" secondAttribute="top" id="qHf-aD-ubg"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
@@ -118,10 +120,10 @@
         </imageView>
     </objects>
     <resources>
-        <image name="RUS" width="7" height="8"/>
-        <image name="Shape" width="198" height="34"/>
-        <image name="direction" width="15" height="15"/>
-        <image name="like" width="16" height="15"/>
-        <image name="shellStation" width="16" height="16"/>
+        <image name="RUS" width="13" height="15"/>
+        <image name="Shape" width="396" height="71"/>
+        <image name="direction" width="30" height="30"/>
+        <image name="like" width="32" height="30"/>
+        <image name="shellStation" width="31" height="31"/>
     </resources>
 </document>
